# p2p_ic

./: Cargo.toml  README.md  dfx.json
src/p2p_ic/: Cargo.toml
src/p2p_ic/src/: canister.rs  lib.rs  main.rs  state.rs
src/p2p_ic_backend/: Cargo.toml
src/trade/: Cargo.toml
src/trade/src/: advertisement.rs  canister.rs  encode.rs  lib.rs  main.rs  state.rs
