[package]
name = "p2p_ic"
version.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
export-api = []

[dependencies]
ic-canister = { workspace = true }
ic-exports = { workspace = true }
ic-log = { workspace = true }
ic-metrics = { workspace = true }
ic-stable-structures = { workspace = true }
ic-storage = { workspace = true }
candid = { workspace = true }
